# wiki

./: .gitignore  Cargo.toml  Makefile  README.md  build_deb.sh  config.toml.example  module.toml
.github/workflows/: build.yml
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: CategoryView.tsx  PageEditor.tsx  PageView.tsx  SearchView.tsx  SpecialView.tsx  WikiHome.tsx  WikiLogo.tsx  WikiNewActions.tsx  WikiSettingsPage.tsx  WikiSidebarBody.tsx  WikiStartPage.tsx  WikiUserSettingsPage.tsx  api.ts  entry.ts  i18n.ts  index.css  nav.ts  store.ts  theme.css  userPrefs.ts
migrations/: 000001_wiki_schema.down.sql  000001_wiki_schema.up.sql
src/: lib.rs  main.rs  state.rs
src/config/: mod.rs  settings.rs
src/errors/: mod.rs
src/events/: mod.rs
src/handlers/: health.rs  mod.rs  pages.rs  search.rs  special.rs  wikis.rs
src/middleware/: mod.rs
src/models/: member.rs  mod.rs  page.rs  wiki.rs
src/router/: mod.rs
src/services/: content_files.rs  link_service.rs  mod.rs  page_service.rs  permission_service.rs  search_service.rs  special_service.rs  wiki_markup.rs  wiki_service.rs
