[package]
name        = "kubuno-wiki"
version     = "0.1.0-alpha"
edition     = "2021"
description = "Kubuno Wiki — collaborative wiki module (MediaWiki-inspired), pages stored as .kbwik files"
license     = "AGPL-3.0"
repository  = "https://github.com/kubuno/wiki"

[[bin]]
name = "kubuno-wiki"
path = "src/main.rs"

[dependencies]
# Drive client face (content stored as .kbwik files via the `drive` module).
kubuno-drive = { git = "https://github.com/kubuno/drive", tag = "drive-v0.1.0", package = "kubuno-drive", default-features = false }
# Workspace
tokio          = { workspace = true }
axum           = { workspace = true }
tower          = { workspace = true }
tower-http     = { workspace = true }
async-trait    = { workspace = true }
sqlx           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
reqwest        = { workspace = true }
config         = { workspace = true }
dotenvy        = { workspace = true }
validator      = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
kubuno-seccomp     = { workspace = true }
thiserror      = { workspace = true }
anyhow         = { workspace = true }
uuid           = { workspace = true }
chrono         = { workspace = true }
bytes          = { workspace = true }
flate2         = "1"
futures        = { workspace = true }
rand           = { workspace = true }
base64         = { workspace = true }
sha2           = { workspace = true }
hex            = { workspace = true }
clap           = { workspace = true }
toml           = { workspace = true }

# Wiki module specific: markup rendering pipeline
pulldown-cmark = "0.11"
regex          = "1"
ammonia        = "4"

# ─── Workspace mono-crate (third-party deps copied from the kubuno/core monorepo;
#     shared crates consumed via tagged git dependencies) ───
[workspace]

[workspace.package]
version      = "0.1.0-alpha"
edition      = "2021"
authors      = ["Kubuno Contributors"]
license      = "AGPL-3.0"
repository   = "https://github.com/kubuno/kubuno"
rust-version = "1.82"

[workspace.dependencies]
# Async
tokio       = { version = "1",    features = ["full"] }
axum        = { version = "0.7",  features = ["macros", "ws", "multipart"] }
tower       = { version = "0.5",  features = ["full"] }
tower-http  = { version = "0.6",  features = ["cors", "compression-gzip", "trace", "limit", "fs", "set-header", "timeout"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "tls-rustls", "bigdecimal"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & Crypto
argon2       = "0.5"
rand         = "0.8"
sha2         = "0.10"
base64       = "0.22"

# HTTP Client (module->core internal calls)
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Config & Env
config  = "0.14"
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging & Tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-util         = { version = "0.7", features = ["io"] }
kubuno-seccomp     = { git = "https://github.com/kubuno/core", tag = "seccomp-v0.1.0", package = "kubuno-seccomp" }

# Errors
thiserror = "1"
anyhow    = "1"

# Utils
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes   = "1"
futures = "0.3"
hex     = "0.4"
toml    = "0.8"
clap    = { version = "4", features = ["color", "wrap_help", "derive", "env"] }
url                 = "2"
urlencoding         = "2"
